[project]
name = "whopaying"
version = "0.1.0"
description = "none"
authors = [
    {name = "Maurice"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yes (>=0.0.1,<0.0.2)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django (>=5.2.4,<6.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
